src/test/ui/extern/external-doc-error.stderr
error: couldn't read $DIR/not-a-file.md: No such file or directory (os error 2)
  --> $DIR/external-doc-error.rs:13:1
   |
LL | #[doc(include = "not-a-file.md")] //~ ERROR: couldn't read
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

